--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,6 @@
 .header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) 90%), url("../img/header_bg.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: scroll, fixed;
-    background-position: center center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) 90%);
+
     padding: 100px;
 }
 
