--- a/css/footer.css
+++ b/css/footer.css
@@ -12,7 +12,19 @@
     display: inline-block;
     font-weight: bold;
     margin: 20px;
+    color: black;
+}
+
+.footer-text a {
     text-decoration: none;
     color: black;
-    text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.15);
+}
+
+@media (max-width: 640px) {
+    .footer{
+        position: inherit;
+        opacity: 1;
+        width: auto;
+        bottom: auto;
+    }
 }
