--- a/css/text.css
+++ b/css/text.css
@@ -70,7 +70,7 @@ body {
     text-align: center;
     color: red;
     font-weight: bolder;
-    text-shadow: 5px 2px 2px rgba(0, 0, 0, 0.3);
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .button {
@@ -78,6 +78,7 @@ body {
     margin-bottom: 20px;
     display: inline-block;
     border-radius: 8px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
     font-size: 24px;
     text-decoration: none;
     padding: 15px 30px;
