--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,10 @@
 .footer {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100px;
     background: #fff;
-    bottom: 0;
-    opacity: 0.95;
-    clear: both;
+    bottom:0;
+    left:0;
 }
 
 .footer-text {
