--- a/css/grid.css
+++ b/css/grid.css
@@ -1,12 +1,16 @@
+.wrapper {
+    min-height: 100%;
+    position: relative;
+}
+
 .container {
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.main {
-    overflow:auto;
-    padding-bottom: 100px;
+.content {
+    padding-bottom:100px;
 }
 
 .container:after {
@@ -55,7 +59,7 @@
         width: auto;
     }
     
-    .main {
+    .wrapper {
         padding-bottom: 0;
     }
 
