--- a/css/text.css
+++ b/css/text.css
@@ -1,7 +1,10 @@
-body {
+html, body {
     font-family: 'Ubuntu', sans-serif;
     color: black;
     font-size: 16px;
+    margin:0;
+    padding:0;
+    height:100%;
 }
 
 .title-main {
